- updated Debian changelog

--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,11 @@
+snapper (0.8.14) stable; urgency=low
+
+  * Updated to version 0.8.14
+
+  * added option to cleanup to make requested free space available
+
+-- Arvin Schnell <aschnell@suse.com>  Wed, 23 Sep 2020 10:32:48 +0000
+
 snapper (0.8.13) stable; urgency=low
 
   * Updated to version 0.8.13
